- coneccion a base de datos de usuarios, areas, puestos y tareas armadas

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -10,8 +10,8 @@
     <main>
        <section id="puestos">
             <% for(let i = 0;i < areas.length;i++){ %>
-            <a class="seccion" href="/bi/<%=areas[i].id%>"> 
-                <h1> <%= areas[i].nombreDeArea%></h1> 
+            <a class="seccion" href="/bi/<%=areas[i].id_area%>"> 
+                <h1> <%= areas[i].nombre_del_Area%></h1> 
             </a>
             <% } %>
        </section>
