--- a/src/views/powerBi.ejs
+++ b/src/views/powerBi.ejs
@@ -8,7 +8,7 @@
     <%-include('./partials/header') %>
     <%-include('./partials/menu_desplegable') %>
     <main>
-        <iframe class="powerBi" title="TABLERO-GLOBAL_HITSS (2)" src="<%=area.powerBi%>" frameborder="0" allowFullScreen="true"></iframe>
+        <iframe class="powerBi" title="TABLERO-GLOBAL_HITSS (2)" src="<%=area.power_Bi%>" frameborder="0" allowFullScreen="true"></iframe>
     </main>
     
 </body>
