Se agregó el form sin funcionalidad

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -8,6 +8,7 @@
 
 body {
     background: linear-gradient(135deg, $blue-500 0%, $blue-300 100%);
+    background-repeat: no-repeat;
 }
 
 h1 {font-size: 28px}
