--- a/client/src/components/Layout.scss
+++ b/client/src/components/Layout.scss
@@ -4,6 +4,7 @@
 .sidebarOpen {
     display: grid;
     grid-template-columns: 240px auto;
+    transition: grid-template-columns 0.1s;
 
     &.active {
         grid-template-columns: 80px auto;
@@ -16,23 +17,11 @@
         height: 100vh;
 
         &__outlet__container {
-            overflow-y: scroll;
+            width: calc(100% - 40px);
             margin: 20px;
             padding: 20px;
         }
 
-        &__outlet__container::-webkit-scrollbar {
-            width: 10px;
-        }
-
-        &__outlet__container::-webkit-scrollbar-track {
-            background-color: rgba($color: $gray-300, $alpha: 1);
-        }
-
-        &__outlet__container::-webkit-scrollbar-thumb {
-            background-color: $gray-500;
-            border-radius: 5px;
-        }
     }
 }
 
@@ -46,8 +35,23 @@
             height: calc(100vh - 40px);
 
             &__outlet__container {
+                overflow-y: scroll;
+                width: 100%;
                 margin: 0;
                 padding: 40px;
+            }
+
+            &__outlet__container::-webkit-scrollbar {
+                width: 10px;
+            }
+    
+            &__outlet__container::-webkit-scrollbar-track {
+                background-color: rgba($color: $gray-300, $alpha: 1);
+            }
+    
+            &__outlet__container::-webkit-scrollbar-thumb {
+                background-color: $gray-500;
+                border-radius: 5px;
             }
         }
     }
