--- a/client/src/components/Sidebar.scss
+++ b/client/src/components/Sidebar.scss
@@ -24,10 +24,6 @@
             color: #fff;
         }
     }
-
-    &__list {
-
-    }
 }
 
 .navbar--mob__content {
@@ -122,7 +118,7 @@
             &__item {
                 width: 200px;
                 height: 40px;
-                border-radius: 30px;
+                border-radius: 20px;
                 display: flex;
                 align-items: center;
                 padding: 0 20px;
@@ -135,6 +131,8 @@
             .item--small {
                 width: 40px !important;
                 height: 40px !important;
+                border-radius: 20px;
+                transition: width 0.1s;
                 display: flex !important;
                 align-items: center !important;
                 justify-content: center !important;
