--- a/client/src/pages/PlanesAccion/PlanesAccion.scss
+++ b/client/src/pages/PlanesAccion/PlanesAccion.scss
@@ -21,12 +21,103 @@
             color: #fff !important;
         }
     }
+
+    &__tareas {
+        &__tabla {
+            overflow-x: scroll;
+            width: calc(100vw - 80px);
+
+            .table {
+                table-layout: auto;
+                width: 100%;
+
+                thead {
+                    tr {
+                        th {
+                            white-space: nowrap;
+                            overflow:hidden;
+                        }
+                    }
+                }
+
+                &__tbody {
+                    &__nombre, &__fechaInicial, &__fechaFinal, &__equipo {
+                        white-space: nowrap;
+                        overflow:hidden;
+                    }
+                    &__notas {
+                        // width: 1000px;
+                        max-width: 300px;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        white-space: nowrap;
+                    }
+                    &__equipo {
+                        width: 1000px;
+                    }
+                    &__prioridad {
+                        span {
+                            padding: 5px 20px;
+                        }
+
+                        &--baja {
+                            background-color: $blue-500 !important;
+                        }
+
+                        &--media {
+                            background-color: $blue-600 !important;
+                        }
+
+                        &--alta {
+                            background-color: $blue-700 !important;
+                        }
+                    }
+
+                    &__estado {
+                        span {
+                            padding: 5px 20px;
+                        }
+
+                        &--pendiente {
+                            background-color: $gray-500 !important;
+                        }
+
+                        &--proceso {
+                            background-color: $warning !important;
+                        }
+
+                        &--completada {
+                            background-color: $success !important;
+                        }
+
+                        &--espera {
+                            background-color: $purple-400 !important;
+                        }
+
+                        &--cancelada {
+                            background-color: $danger !important;
+                        }
+
+                        &--bloqueada {
+                            background-color: $black !important;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media screen and (min-width: 768px) {
     .planes__accion {
         &__tareas--empty {
             padding: 0;
+        }
+
+        &__tareas {
+            &__tabla {
+                width: inherit;
+            }
         }
     }
 }
