--- a/client/src/pages/PlanesAccion/PlanesAccion.scss
+++ b/client/src/pages/PlanesAccion/PlanesAccion.scss
@@ -1,6 +1,21 @@
 @import '~bootstrap/scss/bootstrap.scss';
 @import '~bootstrap/scss/_variables.scss';
 
+.loading__tareas {
+    height: calc(100% - 48px);
+
+    div {
+        margin-bottom: 10px;
+        svg g g circle[stroke] {
+            stroke: $blue-500;
+        }
+    }
+
+    p {
+        color: $blue-500
+    }
+}
+
 .planes__accion {
     height: 100%;
     
@@ -23,100 +38,116 @@
     }
 
     &__tareas {
-        &__tabla {
-            overflow-x: scroll;
-            width: calc(100vw - 80px);
+        height: calc(100% - 24px);
+        &__main {
+            height: 100%;
+            
+            .btn__area {
+                font-size: 12px;
+            }
 
-            .table {
-                table-layout: auto;
-                width: 100%;
-
-                thead {
-                    tr {
-                        th {
-                            white-space: nowrap;
-                            overflow:hidden;
-                            color: $blue-500;
+            &__tabla {
+                overflow-x: scroll;
+                width: calc(100vw - 80px);
+    
+                .table {
+                    table-layout: auto;
+                    width: 100%;
+    
+                    thead {
+                        tr {
+                            th {
+                                white-space: nowrap;
+                                overflow:hidden;
+                                color: $blue-500;
+                                padding: 5px 20px;
+                            }
+                        }
+                    }
+    
+                    &__tbody {
+                        td {
                             padding: 5px 20px;
                         }
+    
+                        &__nombre, &__fechaInicial, &__fechaFinal, &__equipo, &__notas {
+                            white-space: nowrap;
+                            overflow: hidden;
+                        }
+                        &__notas {
+                            max-width: 300px;
+                            text-overflow: ellipsis;
+                        }
+                        &__prioridad {
+                            span {
+                                padding: 6px 12px;
+                            }
+    
+                            &--baja {
+                                background-color: $blue-500 !important;
+                            }
+    
+                            &--media {
+                                background-color: $blue-600 !important;
+                            }
+    
+                            &--alta {
+                                background-color: $blue-700 !important;
+                            }
+                        }
+    
+                        &__estado {
+                            span {
+                                padding: 6px 12px;
+                            }
+    
+                            &--pendiente {
+                                background-color: $gray-500 !important;
+                            }
+    
+                            &--proceso {
+                                background-color: $warning !important;
+                            }
+    
+                            &--completada {
+                                background-color: $success !important;
+                            }
+    
+                            &--espera {
+                                background-color: $purple-400 !important;
+                            }
+    
+                            &--cancelada {
+                                background-color: $danger !important;
+                            }
+    
+                            &--bloqueada {
+                                background-color: $black !important;
+                            }
+                        }
+    
+                        &__buttons {
+                            button {
+                                width: 36px;
+                                height: 36px;
+                                padding: 0;
+                            }
+                        } 
                     }
                 }
+            }
 
-                &__tbody {
-                    td {
-                        padding: 5px 20px;
-                    }
-
-                    &__nombre, &__fechaInicial, &__fechaFinal, &__equipo {
-                        white-space: nowrap;
-                        overflow:hidden;
-                    }
-                    &__notas {
-                        // width: 1000px;
-                        max-width: 300px;
-                        overflow: hidden;
-                        text-overflow: ellipsis;
-                        white-space: nowrap;
-                    }
-                    &__equipo {
-                        width: 1000px;
-                    }
-                    &__prioridad {
-                        span {
-                            padding: 6px 12px;
-                        }
-
-                        &--baja {
-                            background-color: $blue-500 !important;
-                        }
-
-                        &--media {
-                            background-color: $blue-600 !important;
-                        }
-
-                        &--alta {
-                            background-color: $blue-700 !important;
-                        }
-                    }
-
-                    &__estado {
-                        span {
-                            padding: 6px 12px;
-                        }
-
-                        &--pendiente {
-                            background-color: $gray-500 !important;
-                        }
-
-                        &--proceso {
-                            background-color: $warning !important;
-                        }
-
-                        &--completada {
-                            background-color: $success !important;
-                        }
-
-                        &--espera {
-                            background-color: $purple-400 !important;
-                        }
-
-                        &--cancelada {
-                            background-color: $danger !important;
-                        }
-
-                        &--bloqueada {
-                            background-color: $black !important;
-                        }
-                    }
-
-                    &__buttons {
-                        button {
-                            width: 36px;
-                            height: 36px;
-                            padding: 0;
-                        }
-                    } 
-                }
+            &__tabla::-webkit-scrollbar {
+                height: 10px;
+            }
+    
+            &__tabla::-webkit-scrollbar-track {
+                background-color: rgba($color: $gray-300, $alpha: 0);
+            }
+    
+            &__tabla::-webkit-scrollbar-thumb {
+                background-color: $gray-500;
+                border-radius: 5px;
             }
         }
     }
