--- a/client/src/pages/PlanesAccion/PlanesAccion.scss
+++ b/client/src/pages/PlanesAccion/PlanesAccion.scss
@@ -125,6 +125,14 @@
                                 background-color: $black !important;
                             }
                         }
+
+                        &__progreso {
+
+                            &__bar {
+                                width: 120px;
+                            }
+                            
+                        }
     
                         &__buttons {
                             button {
