--- a/client/src/pages/PlanesAccion/PlanesAccion.scss
+++ b/client/src/pages/PlanesAccion/PlanesAccion.scss
@@ -1,6 +1,23 @@
 @import '~bootstrap/scss/bootstrap.scss';
 @import '~bootstrap/scss/_variables.scss';
 
+.modal__delete {
+    .modal-header {
+        .modal-title {
+            color: $blue-500;
+        }
+    }
+
+    .modal-footer {
+        border: none;
+
+        button {
+            width: 120px;
+            height: 40px;
+        }
+    }
+}
+
 .loading__tareas {
     height: calc(100% - 48px);
 
@@ -39,6 +56,20 @@
 
     &__tareas {
         height: calc(100% - 24px);
+
+        &__header {
+            h3 {
+                i {
+                    color: $blue-500;
+                }
+            }
+
+            button {
+                width: 160px;
+                height: 40px;
+            }
+        }
+
         &__main {
             height: 100%;
             
