--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -8,7 +8,7 @@
     <%-include('./partials/header') %>
     <%-include('./partials/menu_desplegable') %>
     <main>
-
+        <p>Hola mundo prueba test</p>
        <script src="/js/home.js"></script>
     </main>
 </body>
