--- a/client/src/components/PowerBI.scss
+++ b/client/src/components/PowerBI.scss
@@ -1,6 +1,22 @@
 @import '~bootstrap/scss/bootstrap.scss';
 @import '~bootstrap/scss/_variables.scss';
 
+.loading__powerbi {
+    width: 100%;
+    height: 100%;
+
+    div {
+        margin-bottom: 10px;
+        svg g g circle[stroke] {
+            stroke: $blue-500;
+        }
+    }
+
+    p {
+        color: $blue-500
+    }
+}
+
 .no__access {
     width: 100%;
     height: 100%;
