--- a/client/src/components/Tareas.scss
+++ b/client/src/components/Tareas.scss
@@ -18,14 +18,15 @@
 }
 
 .tareas {
-    height: calc(100% - 24px);
+    height: 100%;
+    // height: calc(100% - 24px);
 
     &__inicio {
         width: 100%;
         height: 100%;
 
         img {
-            width: 200px;
+            width: 150px;
             max-width: 100%;
         }
     
@@ -211,5 +212,11 @@
     .tareas {
         width: calc(100% - 220px);
         height: 100%;
+
+        &__inicio {
+            img {
+                width: 200px;
+            }
+        }
     }
 }
