--- a/client/src/components/Tareas.scss
+++ b/client/src/components/Tareas.scss
@@ -19,7 +19,6 @@
 
 .tareas {
     height: 100%;
-    // height: calc(100% - 24px);
 
     &__inicio {
         width: 100%;
@@ -209,11 +208,17 @@
 }
 
 @media screen and (min-width: 768px) {
+    .loading__tareas {
+        width: calc(100% - 230px);
+    }
+
     .tareas {
-        width: calc(100% - 220px);
+        width: calc(100% - 230px);
         height: 100%;
 
         &__inicio {
+            width: calc(100% - 230px);
+
             img {
                 width: 200px;
             }
