--- a/client/src/pages/PlanesAccion/PlanesAccion.scss
+++ b/client/src/pages/PlanesAccion/PlanesAccion.scss
@@ -40,55 +40,59 @@
     &__main {
         &__menu {
             width: 100%;
-    
-            .acordion {
-                border-radius: 0;
-            }
-    
-            .accordion-item {
-                border: none;
-    
-                button {
+
+            .container__accordion {
+                width: 100%;
+
+                .acordion {
+                    border-radius: 0;
+                }
+        
+                .accordion-item {
+                    border: none;
+        
+                    button {
+                        padding: 10px 0;
+                        border-radius: 20px !important;
+                        height: 40px;
+                        color: $blue-500;
+                        box-shadow: none;
+                    }
+        
+                    button[aria-expanded="true"] {
+                        background-color: rgba($color: #fff, $alpha: 0);
+                    }
+        
+                    .accordion-header {
+                        .accordion-button {
+                            font-size: 14px;
+                        }
+                    }
+                }
+                
+                .accordion-body {
                     padding: 10px 0;
-                    border-radius: 20px !important;
-                    height: 40px;
-                    color: $blue-500;
-                    box-shadow: none;
-                }
-    
-                button[aria-expanded="true"] {
-                    background-color: rgba($color: #fff, $alpha: 0);
-                }
-    
-                .accordion-header {
-                    .accordion-button {
+        
+                    button {
+                        width: 100%;
+                        padding: 0;
                         font-size: 14px;
+                        text-align: left;
+                        color: #000;
+                        margin-bottom: 10px;
+        
+                        .active {
+                            display: none
+                        }
                     }
-                }
-            }
-            
-            .accordion-body {
-                padding: 10px 0;
-    
-                button {
-                    width: 100%;
-                    padding: 0;
-                    font-size: 14px;
-                    text-align: left;
-                    color: #000;
-                    margin-bottom: 10px;
-    
-                    .active {
-                        display: none
+        
+                    button:last-child {
+                        margin-bottom: 0;
                     }
-                }
-    
-                button:last-child {
-                    margin-bottom: 0;
-                }
-    
-                button:hover .active {
-                    display: block;
+        
+                    button:hover .active {
+                        display: block;
+                    }
                 }
             }
     
@@ -101,14 +105,41 @@
 }
 
 @media screen and (min-width: 768px) {
+    .loading__tareas {
+        width: calc(100% - 220px);
+    }
+
     .planes__accion {
 
         &__main {
             height: calc(100% - 48px);
 
             &__menu {
-                width: 200px;
+                width: 210px;
                 margin-right: 20px;
+
+                .container__accordion {
+                    overflow-x: hidden;
+                    overflow-y: scroll;
+                    height: calc(100% - 40px);
+
+                    .accordion {
+                        width: 190px;
+                    }
+                }
+
+                .container__accordion::-webkit-scrollbar {
+                    width: 10px;
+                }
+        
+                .container__accordion::-webkit-scrollbar-track {
+                    background-color: rgba($color: $gray-300, $alpha: 0);
+                }
+        
+                .container__accordion::-webkit-scrollbar-thumb {
+                    background-color: $gray-500;
+                    border-radius: 5px;
+                }
 
                 &__btn {
                     width: 180px;
