Tooltip de la descripción del proyecto

--- a/client/src/components/Tareas.scss
+++ b/client/src/components/Tareas.scss
@@ -35,6 +35,10 @@
     }
 
     &__header {
+        &__title {
+            cursor: pointer;
+        }
+        
         h3 {
             i {
                 color: $blue-500;
