--- a/client/src/pages/PlanesAccion/PlanesAccion.scss
+++ b/client/src/pages/PlanesAccion/PlanesAccion.scss
@@ -34,6 +34,23 @@
     }
 }
 
+.planes__accion--empty {
+    border: 2px dashed $blue-500;
+    height: calc(100% - 48px);
+    padding: 20px;
+
+    h2 {
+        color: $blue-500
+    }
+
+    &__btn {
+        width: 180px;
+        height: 40px;
+        background-color: $blue-500 !important;
+        color: #fff !important;
+    }
+}
+
 .planes__accion {
     height: 100%;
 
