--- a/client/src/pages/PlanesAccion/PlanesAccion.scss
+++ b/client/src/pages/PlanesAccion/PlanesAccion.scss
@@ -18,9 +18,9 @@
     }
 }
 
-.loading__tareas {
+.loading__proyectos {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 48px);
 
     div {
         margin-bottom: 10px;
