Se puede agregar un indicador, se puede visualizar las 3 últimas metricas del indicador

--- a/client/src/pages/DatIN/DatIN.scss
+++ b/client/src/pages/DatIN/DatIN.scss
@@ -22,6 +22,23 @@
     height: 40px;
 }
 
+.datin__error {
+    height: calc(100% - 48px);
+
+    img {
+        width: 200px;
+        max-width: 100%;
+    }
+
+    h2 {
+        color: $blue-500
+    }
+}
+
+.formIn__container {
+    height: calc(100% - 48px);
+}
+
 .datin {
     height: 100%;
     
@@ -43,6 +60,7 @@
         row-gap: 20px;
 
         &__indicador {
+            cursor: pointer;
             height: 150px;
 
             p {
