--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -29,3 +29,16 @@ h1, h2, h3, h4, h5, h6 {
         }
     }
 }
+
+.scroll--y::-webkit-scrollbar {
+    width: 10px;
+}
+
+.scroll--y::-webkit-scrollbar-track {
+    background-color: rgba($color: $gray-300, $alpha: 0);
+}
+
+.scroll--y::-webkit-scrollbar-thumb {
+    background-color: $gray-500;
+    border-radius: 5px;
+}
