--- a/client/src/components/FormDatIN/FormDatIN.scss
+++ b/client/src/components/FormDatIN/FormDatIN.scss
@@ -1,6 +1,28 @@
 @import '~bootstrap/scss/bootstrap.scss';
 @import '~bootstrap/scss/_variables.scss';
 
+.formDataIn__error {
+    font-size: 12px;
+    color: $danger;
+    margin: 0;
+}
+
+.formDatIn {
+    width: 100%;
+    height: calc(100% - 56px);
+    overflow-y: scroll;
+
+    &__main {
+        width: 100%;
+    }
+}
+
+.steps__container {
+    &__main {
+        width: 100%;
+    }
+}
+
 .steps {
     &__step {
         &__circle {
@@ -59,8 +81,9 @@
         &__lista {
             &__log {
                 width: 240px;
-                height: 80px;
+                // height: 90px;
                 padding: 10px;
+                margin-bottom: 8px;
 
                 img {
                     width: 20px;
@@ -71,9 +94,46 @@
                     color: $blue-500;
                 }
             }
+
+            &__log:last-child {
+                margin-bottom: 0;
+            }
         }
 
         &__grafica {
+        }
+    }
+}
+
+.final__step {
+    img {
+        width: 150px;
+        max-width: 100%;
+    }
+
+    h2 {
+        color: $blue-500
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .steps__container {
+        &__main {
+            width: 75%;
+        }
+    }
+
+    .formDatIn {
+        &__main {
+            width: 75%;
+        }
+    }
+
+    .preview {
+        &__logs {
+            &__grafica {
+                width: calc(100% - 240px);
+            }
         }
     }
 }
