--- a/client/src/pages/DatIN/DatIN.scss
+++ b/client/src/pages/DatIN/DatIN.scss
@@ -56,6 +56,7 @@
         height: calc(100% - 48px);
         display: grid;
         grid-template-columns: 1fr;
+        grid-template-rows: max-content;
         column-gap: 20px;
         row-gap: 20px;
 
@@ -85,6 +86,7 @@
 
         &__indicador {
             height: 100%;
+
             p {
                 font-size: 14px;
             }
