Se puede editar una métrica

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -42,3 +42,12 @@ h1, h2, h3, h4, h5, h6 {
     background-color: $gray-500;
     border-radius: 5px;
 }
+
+.input--arrows::-webkit-outer-spin-button, .input--arrows::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+.input--arrows[type=number] {
+    -moz-appearance: textfield;
+  }
