--- a/client/src/components/FormDatIN/FormDatIN.scss
+++ b/client/src/components/FormDatIN/FormDatIN.scss
@@ -62,6 +62,11 @@
     label {
         font-size: 14px;
     }
+
+    .icon__dato {
+        cursor: pointer;
+        font-size: 12px;
+    }
 }
 
 .form__log {
