--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -6,10 +6,10 @@
     padding: 0;
 }
 
-body {
-    background: linear-gradient(135deg, $blue-500 0%, $blue-300 100%);
-    background-repeat: no-repeat;
-}
+// body {
+//     background: linear-gradient(135deg, $blue-500 0%, $blue-300 100%);
+//     background-repeat: no-repeat;
+// }
 
 h1 {font-size: 28px}
 h2 {font-size: 24px}
