--- a/client/src/components/Layout/Navbar.scss
+++ b/client/src/components/Layout/Navbar.scss
@@ -1,3 +1,6 @@
+@import '~bootstrap/scss/bootstrap.scss';
+@import '~bootstrap/scss/_variables.scss';
+
 .navbar {
     width: 100%;
     padding: 20px !important;
@@ -14,12 +17,18 @@
 
 @media screen and (min-width: 768px) {
     .navbar {
-        padding: 20px 0 20px 50px !important;
+        padding: 20px 40px !important;
     
         &__content {
             a {
                 img {
                     height: 40px;
+                }
+            }
+
+            .btn {
+                p {
+                    color: $blue-500;
                 }
             }
         }
