--- a/client/src/components/Modales/ModalShowIndicador.scss
+++ b/client/src/components/Modales/ModalShowIndicador.scss
@@ -26,11 +26,21 @@
 .form__metrica {
     form {
         .form__input {
-            width: calc(100% - 180px);
+            width: 100%;
         }
 
         .btn__metrica {
             width: 180px;
+        }
+    }
+}
+
+@media screen and (min-width: 768px)  {
+    .form__metrica {
+        form {
+            .form__input {
+                width: calc(100% - 180px);
+            }
         }
     }
 }
