--- a/client/src/components/Layout/Layout.scss
+++ b/client/src/components/Layout/Layout.scss
@@ -13,7 +13,7 @@
 
     .main {
         display: grid;
-        grid-template-rows: 80px auto;
+        grid-template-rows: 80px auto 44px;
         width: 100vw;
         height: 100%;
         overflow: scroll;
@@ -29,7 +29,7 @@
     .sidebarOpen {
         .main {
             display: grid;
-            grid-template-rows: 80px auto;
+            grid-template-rows: 80px auto 64px;
             width: 100%;
             height: 100vh;
             overflow: auto;
