--- a/client/src/components/Layout/Footer.scss
+++ b/client/src/components/Layout/Footer.scss
@@ -2,11 +2,11 @@
 @import '~bootstrap/scss/_variables.scss';
 
 footer {
-    padding: 0 20px 20px 20px;
+    padding: 20px;
 }
 
 @media screen and (min-width: 768px) {
     footer {
-        padding: 0 40px 40px 40px;
+        padding: 20px 40px;
     }
 }
