--- a/client/src/pages/PlanesAccion/CiclosAuditoria.scss
+++ b/client/src/pages/PlanesAccion/CiclosAuditoria.scss
@@ -1,6 +1,22 @@
 @import '~bootstrap/scss/bootstrap.scss';
 @import '~bootstrap/scss/_variables.scss';
 
+.loading__auditoria {
+    width: 100%;
+    height: calc(100% - 48px);
+
+    div {
+        margin-bottom: 10px;
+        svg g g circle[stroke] {
+            stroke: $blue-500;
+        }
+    }
+
+    p {
+        color: $blue-500
+    }
+}
+
 .ciclos__auditoria {
     height: 100%;
 
@@ -18,6 +34,7 @@
                 width: calc(50% - 5px);
                 height: 80px;
                 padding: 10px;
+                background-color: #fff;
 
                 h4 {
                     color: $blue-500;
