Estructura año, ciclo, procesos y tareas

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -24,8 +24,13 @@ h1, h2, h3, h4, h5, h6 {
 
 .section {
     &__header {
+        .btn__back {
+            color: #0d6efd;
+            cursor: pointer;
+        }
+
         i {
-            color: #0d6efd
+            color: #0d6efd;
         }
     }
 }
