--- a/client/src/components/Tareas.scss
+++ b/client/src/components/Tareas.scss
@@ -20,6 +20,20 @@
 .tareas {
     height: 100%;
 
+    &__error {
+        width: 100%;
+        // height: calc(100% - 48px);
+
+        img {
+            width: 200px;
+            max-width: 100%;
+        }
+
+        h2 {
+            color: $blue-500
+        }
+    }
+
     &__inicio {
         width: 100%;
         height: 100%;
@@ -140,14 +154,25 @@
                 }
 
                 &__tbody {
+                    // position: relative;
+
+                    // .btn__showsub {
+                    //     position: absolute;
+                    //     height: 32px;
+                    //     border-radius: 0 0 16px 16px;
+                    // }
+
+                    // tr {
+                    //     position: relative;
+                    // }
 
                     &__tarea {
                         cursor: pointer;
                     }
 
-                    &__tarea:hover .active{
-                        display: flex;
-                    }
+                    // &__tarea:hover .active{
+                    //     display: flex;
+                    // }
 
                     td {
                         padding: 5px 20px;
@@ -224,15 +249,17 @@
                     }
 
                     &__buttons {
-                        display: none;
+                        // display: none;
+                        display: flex;
                         flex-direction: row;
-                        position: absolute;
-                        right: 0;
+                        align-items: center;
+                        // position: absolute;
+                        // left: 0;
                         height: 50px;
 
                         button {
-                            width: 36px;
-                            height: 36px;
+                            width: 32px;
+                            height: 32px;
                             padding: 0;
                         }
                     } 
