--- a/client/src/components/Tareas.scss
+++ b/client/src/components/Tareas.scss
@@ -1,6 +1,83 @@
 @import '~bootstrap/scss/bootstrap.scss';
 @import '~bootstrap/scss/_variables.scss';
 
+// CSS de la tabla
+.details-enter {
+    opacity: 0;
+}
+.details-enter-active {
+    opacity: 1;
+    transition: opacity 300ms;
+}
+.details-exit {
+    opacity: 1;
+}
+.details-exit-active {
+    opacity: 0;
+    transition: opacity 300ms;
+}
+// .details-enter {
+//     height: 0;
+//     overflow: hidden;
+// }
+
+// .details-enter-active {
+//     height: 100px; /* Ajusta según el contenido esperado */
+//     transition: height 0.3s ease;
+// }
+
+// .details-exit {
+//     height: 100px; /* Ajusta según el contenido esperado */
+//     overflow: hidden;
+// }
+
+// .details-exit-active {
+//     height: 0;
+//     transition: height 0.3s ease;
+// }
+
+// Custom table
+.table__custom {
+    display: flex;
+    flex-direction: column;
+    // border-collapse: collapse;
+
+    &__header {
+        display: flex;
+        flex-direction: row;
+        border-bottom: 1px solid $gray-300;
+    }
+
+    &__body {
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__row {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        border-bottom: 1px solid $gray-300;
+    }
+
+    &__cell {
+        white-space: nowrap;
+        padding: 10px;
+
+        &--title {
+            color: $blue-500;
+        }
+
+        .btn__edit--icon {
+            color: $success
+        }
+
+        .btn__delete--icon {
+            color: $danger
+        }
+    }
+}
+
 .loading__tareas {
     width: 100%;
     height: 100%;
