Subtareas y modal edit subtarea

--- a/client/src/components/Modales/ModalPlanes.scss
+++ b/client/src/components/Modales/ModalPlanes.scss
@@ -37,6 +37,11 @@
     label {
         font-size: 14px;
     }
+
+    &sub__btn {
+        width: 200px;
+        height: 40px;
+    }
     
     &__btn {
         width: 160px;
