--- a/client/src/pages/PlanesAccion/Year.scss
+++ b/client/src/pages/PlanesAccion/Year.scss
@@ -31,16 +31,18 @@
             } 
 
             &__grafica {
-                background-color: #fff;
+                display: block;
                 position: relative;
-                width: auto;
+                width: 100%;
+                height: 100%;
+                max-height: 1200px;
+                background-color: #fff;
                 padding: 20px;
-                // height: auto;
 
                 .btn__expandir {
                     position: absolute;
                     right: 30px;
-                    bottom: 36px;
+                    bottom: 40px;
                     transition: all .2s ease-in-out;
                     border: 2px solid $blue-500;
                     border-radius: 10px;
