--- a/client/src/pages/PlanesAccion/Year.scss
+++ b/client/src/pages/PlanesAccion/Year.scss
@@ -34,8 +34,8 @@
                 display: block;
                 position: relative;
                 width: 100%;
-                height: 100%;
-                max-height: 1200px;
+                // height: 100%;
+                // max-height: 1200px;
                 background-color: #fff;
                 padding: 20px;
 
