--- a/client/src/components/Tareas.scss
+++ b/client/src/components/Tareas.scss
@@ -67,7 +67,7 @@
 
     &__cell {
         white-space: nowrap;
-        padding: 10px;
+        padding: 5px 10px;
 
         &--title {
             color: $blue-500;
