--- a/client/src/components/Tareas.scss
+++ b/client/src/components/Tareas.scss
@@ -36,9 +36,14 @@
 //     transition: height 0.3s ease;
 // }
 
+.icon__lista__task {
+    width: 40px;
+    height: 50px;
+}
+
 // Custom table
 .table__custom {
-    width: 1694px;
+    width: 1670px;
     display: flex;
     flex-direction: column;
     font-size: 14px;
@@ -56,10 +61,32 @@
     }
 
     &__row {
+        height: 50px;
         display: flex;
         flex-direction: row;
         align-items: center;
         border-bottom: 1px solid $gray-300;
+    }
+
+    &__row--btnadd {
+        margin-left: 40px;
+        padding: 6px 10px;
+    }
+
+    .bgblue {
+        background-color: #F4F8FF;
+    }
+
+    .bggray300 {
+        background-color: $gray-300;
+    }
+
+    .bggray200 {
+        background-color: $gray-200;
+    }
+
+    .bggray100 {
+        background-color: $gray-100;
     }
 
     .light {
@@ -83,51 +110,66 @@
         }
     }
 
+    
+    .btn__ico {
+        width: 20px;
+    }
+
+    .btn__ico--g {
+        width: 40px;
+    }
+
+
     // Cell sizes
     .cell__dropdown {
-        flex: 1 0 64px;
+        width: 40px;
     }
 
     .cell__buttons {
-        flex: 1 0 220px; 
+        width: 180px; 
+    }
+
+    .cell__buttons--task {
+        width: 180px; 
+        margin-left: 40px;
     }
 
     .cell__nombre {
-        flex: 1 0 300px;
+        width: 300px;
         overflow: hidden;
         text-overflow: ellipsis;
     }
 
     .cell__prioridad {
-        flex: 1 0 90px;
+        width: 90px;
     }
 
     .cell__estado {
-        flex: 1 0 120px;
+        width: 120px;
     }
 
     .cell__progreso {
-        flex: 1 0 140px;
+        width: 140px;
     }
 
     .cell__horas {
-        flex: 1 0 120px;
+        width: 120px;
     }
 
     .cell__notas {
-        flex: 1 0 200px;
+        width: 200px;
         overflow: hidden;
         text-overflow: ellipsis;
     }
 
     .cell__mail {
-        flex: 1 0 200px;
+        width: 200px;
         overflow: hidden;
         text-overflow: ellipsis;
     }
 
     .cell__date {
-        flex: 1 0 120px;
+        width: 120px;
     }
 
 }
@@ -458,6 +500,7 @@
 
     .ciclos__btn {
         height: 40px;
+        width: fit-content;
 
         i {
             line-height: normal;
