--- a/client/src/components/Tareas.scss
+++ b/client/src/components/Tareas.scss
@@ -41,6 +41,17 @@
     height: 50px;
 }
 
+.icon__lista__muestra {
+    width: 80px;
+    height: 50px;
+    padding-left: 20px;
+
+    img {
+        width: 60px;
+        height: 50px;
+    }
+}
+
 // Custom table
 .table__custom {
     width: 1670px;
@@ -69,7 +80,8 @@
     }
 
     &__row--btnadd {
-        margin-left: 40px;
+        height: 50px;
+        // margin-left: 40px;
         padding: 6px 10px;
     }
 
