Input file para enviar archivos & corrección en modSubTarea

--- a/client/src/components/Tareas.scss
+++ b/client/src/components/Tareas.scss
@@ -83,6 +83,10 @@
         height: 50px;
         // margin-left: 40px;
         padding: 6px 10px;
+
+        .btn__file {
+            width: auto;
+        }
     }
 
     .bgblue {
