--- a/client/src/components/Tareas.scss
+++ b/client/src/components/Tareas.scss
@@ -80,12 +80,16 @@
     }
 
     &__row--btnadd {
-        height: 50px;
+        // height: 50px;
         // margin-left: 40px;
         padding: 6px 10px;
 
         .btn__file {
             width: auto;
+        }
+
+        .btn__addMuestra {
+            width: max-content;
         }
     }
 
