--- a/client/src/pages/PlanesAccion/Year.scss
+++ b/client/src/pages/PlanesAccion/Year.scss
@@ -45,6 +45,7 @@
                     border: 2px solid $blue-500;
                     border-radius: 10px;
                     padding: 3px 8px !important;
+                    background-color: #fff;
 
                     i {
                         color: $blue-500;
